# mailing-list-plugin-api

./: Cargo.toml  README.md  shell.nix
src/: lib.rs
